[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/other/theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/PlanetUI.gd" type="Script" id=2]
[ext_resource path="res://ui/components/UpgradeItem.tscn" type="PackedScene" id=3]

[node name="UI" type="Control"]
margin_right = 220.0
margin_bottom = 219.0
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Name" type="Label" parent="."]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 12.5
margin_top = 12.5
margin_right = 52.5
margin_bottom = 26.5
text = "Planet"

[node name="Minerals" type="Label" parent="."]
modulate = Color( 0.262745, 0.513726, 0.482353, 1 )
margin_left = 24.9999
margin_top = 30.0
margin_right = 64.9999
margin_bottom = 44.0
text = "100%"

[node name="MineralIcon" type="Label" parent="."]
modulate = Color( 0.262745, 0.513726, 0.482353, 1 )
margin_left = 12.5
margin_top = 30.0
margin_right = 21.5
margin_bottom = 44.0
text = "m"

[node name="Credits" type="Label" parent="."]
modulate = Color( 0.262745, 0.513726, 0.482353, 1 )
margin_left = 85.0
margin_top = 30.0
margin_right = 125.0
margin_bottom = 44.0
text = "100%"

[node name="CreditIcon" type="Label" parent="."]
modulate = Color( 0.262745, 0.513726, 0.482353, 1 )
margin_left = 72.5
margin_top = 30.0
margin_right = 81.5
margin_bottom = 44.0
text = "c"

[node name="Colonize" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button" type="Button" parent="Colonize"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -67.0
margin_top = -51.0
margin_right = 67.0
margin_bottom = -15.0
text = "Colonize"

[node name="Price" type="Label" parent="Colonize"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -74.0
margin_right = 33.0
margin_bottom = -60.0
text = "300 Credits"

[node name="Default" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Econ" type="Control" parent="Default"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 28.0
margin_right = -1.0
margin_bottom = -1.0

[node name="SolarLabel" type="Label" parent="Default/Econ"]
modulate = Color( 0.261841, 0.515625, 0.48133, 1 )
margin_left = 13.0
margin_top = 65.0
margin_right = 122.0
margin_bottom = 79.0
text = "Solar Panels 100¤"

[node name="Solar" type="Label" parent="Default/Econ"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 46.0
margin_top = 82.0
margin_right = 155.0
margin_bottom = 96.0
text = "0 / 5"

[node name="SolarButton" type="Button" parent="Default/Econ"]
margin_left = 13.0
margin_top = 79.0
margin_right = 39.0
margin_bottom = 99.0
text = "+1"

[node name="MinesLabel" type="Label" parent="Default/Econ"]
modulate = Color( 0.261841, 0.515625, 0.48133, 1 )
margin_left = 13.0
margin_top = 121.0
margin_right = 129.0
margin_bottom = 135.0
text = "Mineral Mines 100¤"

[node name="Mines" type="Label" parent="Default/Econ"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 47.0
margin_top = 138.0
margin_right = 156.0
margin_bottom = 152.0
text = "0 / 5"

[node name="MinesButton" type="Button" parent="Default/Econ"]
margin_left = 13.0
margin_top = 135.0
margin_right = 39.0
margin_bottom = 155.0
text = "+1"

[node name="Tech" type="Control" parent="Default"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 28.0
margin_right = -1.0
margin_bottom = -1.0

[node name="PlanetaryLabel" type="Label" parent="Default/Tech"]
modulate = Color( 0.261841, 0.515625, 0.48133, 1 )
margin_left = 13.0
margin_top = 65.0
margin_right = 122.0
margin_bottom = 79.0
text = "Planetary Tech 100¤"

[node name="Planetary" type="Label" parent="Default/Tech"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 46.0
margin_top = 82.0
margin_right = 155.0
margin_bottom = 96.0
text = "0 / 5"

[node name="PlanetaryB" type="Button" parent="Default/Tech"]
margin_left = 13.0
margin_top = 79.0
margin_right = 39.0
margin_bottom = 99.0
text = "+1"

[node name="ShipLabel" type="Label" parent="Default/Tech"]
modulate = Color( 0.261841, 0.515625, 0.48133, 1 )
margin_left = 13.0
margin_top = 121.0
margin_right = 129.0
margin_bottom = 135.0
text = "Spaceship Tech 100¤"

[node name="Ship" type="Label" parent="Default/Tech"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 47.0
margin_top = 138.0
margin_right = 156.0
margin_bottom = 152.0
text = "0 / 5"

[node name="ShipB" type="Button" parent="Default/Tech"]
margin_left = 13.0
margin_top = 135.0
margin_right = 39.0
margin_bottom = 155.0
text = "+1"

[node name="Def" type="Control" parent="Default"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 28.0
margin_right = -1.0
margin_bottom = -1.0

[node name="ShieldsLabel" type="Label" parent="Default/Def"]
modulate = Color( 0.261841, 0.515625, 0.48133, 1 )
margin_left = 13.0
margin_top = 65.0
margin_right = 140.0
margin_bottom = 79.0
text = "Planetary Shields 100¤"

[node name="Shields" type="Label" parent="Default/Def"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 46.0
margin_top = 82.0
margin_right = 155.0
margin_bottom = 96.0
text = "0 / 5"

[node name="ShieldsB" type="Button" parent="Default/Def"]
margin_left = 13.0
margin_top = 79.0
margin_right = 39.0
margin_bottom = 99.0
text = "+1"

[node name="ArtilleryLabel" type="Label" parent="Default/Def"]
modulate = Color( 0.261841, 0.515625, 0.48133, 1 )
margin_left = 13.0
margin_top = 121.0
margin_right = 140.0
margin_bottom = 135.0
text = "Defensive Artillery 100¤"

[node name="Artillery" type="Label" parent="Default/Def"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 47.0
margin_top = 138.0
margin_right = 156.0
margin_bottom = 152.0
text = "0 / 5"

[node name="ArtilleryB" type="Button" parent="Default/Def"]
margin_left = 13.0
margin_top = 135.0
margin_right = 39.0
margin_bottom = 155.0
text = "+1"

[node name="Ship" type="Control" parent="Default"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 28.0
margin_right = -1.0
margin_bottom = -1.0

[node name="Label" type="Label" parent="Default/Ship"]
modulate = Color( 0.262745, 0.513726, 0.482353, 1 )
margin_left = 14.0
margin_top = 53.0
margin_right = 128.0
margin_bottom = 67.0
text = "Upgrade your ship."

[node name="Control" type="Control" parent="Default/Ship"]
margin_left = -227.0
margin_top = -48.0
margin_right = -6.0
margin_bottom = 191.0

[node name="Panel" type="Panel" parent="Default/Ship/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Default/Ship/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_top = 14.0
margin_right = -7.0
margin_bottom = -10.0
size_flags_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Default/Ship/Control/ScrollContainer"]
margin_right = 184.0
margin_bottom = 265.0
custom_constants/separation = 17

[node name="Item" parent="Default/Ship/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]

[node name="Item2" parent="Default/Ship/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 94.0
margin_bottom = 171.0

[node name="Item3" parent="Default/Ship/Control/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 188.0
margin_bottom = 265.0

[node name="EconB" type="Button" parent="Default"]
margin_left = 14.0
margin_top = 50.0
margin_right = 49.0
margin_bottom = 66.0
text = "Econ"

[node name="TechB" type="Button" parent="Default"]
margin_left = 49.0
margin_top = 50.0
margin_right = 85.0
margin_bottom = 66.0
text = "Tech"

[node name="DefB" type="Button" parent="Default"]
margin_left = 85.0
margin_top = 50.0
margin_right = 115.0
margin_bottom = 66.0
text = "Def"

[node name="ShipB" type="Button" parent="Default"]
margin_left = 115.0
margin_top = 50.0
margin_right = 148.0
margin_bottom = 66.0
text = "Ship"

[node name="Owned" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Owned"]
modulate = Color( 0.396078, 0.654902, 0.619608, 1 )
margin_left = 29.0
margin_top = 143.0
margin_right = 184.0
margin_bottom = 174.0
text = "This planet is controlled by another player."
autowrap = true
